<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:backgroundTint="@color/purple_200"
    android:orientation="vertical"
    tools:context=".MediaActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="35dp"
        android:fontFamily="@font/alata"
        android:text="@string/song"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <SurfaceView
        android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:fontFamily="@font/alatsi"
            android:text="@string/radio_audio" />

        <RadioButton
            android:id="@+id/radio_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:fontFamily="@font/alata"
            android:text="@string/radio_video" />

    </RadioGroup>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp">

        <ImageButton
            android:id="@+id/play_btn"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="@string/play_btn_description"
            android:scaleType="fitXY"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/pause_btn"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="@string/pause_btn_description"
            android:scaleType="fitXY"
            android:src="@drawable/pause" />

        <ImageButton
            android:id="@+id/stop_btn"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="50dp"
            android:adjustViewBounds="true"
            android:background="@color/white"
            android:contentDescription="@string/stop_btn_description"
            android:scaleType="fitXY"
            android:src="@drawable/stop" />

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alatsi"
        android:text="@string/footer"
        android:textAlignment="center" />

</LinearLayout>