<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:backgroundTint="@color/bg"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/camera_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="14dp"
        android:background="@color/blue"
        android:contentDescription="@string/camera_btn_description"
        android:src="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/gallery_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="14dp"
        android:background="@color/gray"
        android:contentDescription="@string/gallery_btn_description"
        android:src="@android:drawable/ic_menu_gallery" />

    <ImageButton
        android:id="@+id/media_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="14dp"
        android:background="@color/orange"
        android:contentDescription="@string/media_btn_description"
        android:src="@android:drawable/ic_media_play" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/space_grotesk_light"
        android:text="@string/footer"
        android:textAlignment="center" />

</LinearLayout>
